# FocusCat

./: AGENTS.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  turbo.json  vitest.config.mjs
crates/_deprecated/mado/: Cargo.toml  Package.resolved  Package.swift  README.md  build.rs
crates/_deprecated/mado-v1/: Cargo.toml  README.md
crates/_deprecated/mado-v1/examples/: listen.rs  poll.rs
crates/_deprecated/mado-v1/src/: config.rs  error.rs  lib.rs  listener.rs  monitor.rs  types.rs
crates/_deprecated/mado-v1/src/platform/: mod.rs
crates/_deprecated/mado-v1/src/platform/linux/: mod.rs  window_info.rs  x11_helpers.rs  x11_monitor.rs
crates/_deprecated/mado-v1/src/platform/macos/: accessibility.rs  app_info.rs  browser.rs  mod.rs  window_event_handler.rs  window_info.rs  workspace.rs
crates/_deprecated/mado-v2-poc/: Cargo.toml  README.md  build.rs
crates/_deprecated/mado-v2-poc/examples/: poc_cli.rs  poc_tauri_style.rs
crates/_deprecated/mado-v2-poc/src/: lib.rs
crates/_deprecated/mado-v2-poc/src-swift/: Package.swift
crates/_deprecated/mado-v2-poc/src-swift/Sources/: MadoSwift.swift
crates/_deprecated/mado/examples/: installed_apps.rs  listen.rs  listen_threaded.rs  poll.rs
crates/_deprecated/mado/src/: config.rs  error.rs  lib.rs  listener.rs  monitor.rs  types.rs
crates/_deprecated/mado/src-swift/: Accessibility.swift  AppColor.swift  AppIcon.swift  AppInfo.swift  BrowserInfo.swift  ColorPalette.swift  CoreGraphics.swift  FFI.swift  InstalledApps.swift  Log.swift  SupportedBrowsers.swift  WebsiteInfo.swift  WindowInfo.swift  WindowMonitor.swift
crates/_deprecated/mado/src/platform/: mod.rs
crates/_deprecated/mado/src/platform/linux/: mod.rs
(+15 files in other folders)
