[package]
name = "mado"
version = "0.0.1"
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
specta = { version = "2.0.0-rc.21", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"
objc2 = "0.6.3"
objc2-foundation = "0.3.2"
objc2-app-kit = "0.3.2"
accessibility-sys = "0.2.0"
libc = "0.2.177"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21.0", features = ["xlib"] }
libc = "0.2.177"
