[package]
name = "mado-poc"
version = "0.0.1"
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
thiserror = "2.0.17"
swift-rs = "1.0.5"

[build-dependencies]
swift-rs = { version = "1.0.5", features = ["build"] }

[[example]]
name = "poc_cli"
path = "examples/poc_cli.rs"

[[example]]
name = "poc_tauri_style"
path = "examples/poc_tauri_style.rs"
