[package]
name = "mado"
version = "0.0.1"
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
specta = { version = "2.0.0-rc.21", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
swift-rs = "1.0.7"

[target.'cfg(target_os = "macos")'.build-dependencies]
swift-rs = { version = "1.0.7", features = ["build"] }
